ret包，用于处理返回的格式
