# controller/restAPI/handler/user/user_param.go
@@ -1,7 +1,11 @@
 package user
 
-type CreateUserParams struct {
-	Email    string
-	Name     string
-	Password string
+type createUserParams struct {
+	Email    string `json:"email" binding:"required"`
+	Name     string `json:"name" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type getUserInfoByEmailParams struct {
+	Email string `form:"email" binding:"required"`
 }
